<resources>
    <string name="app_name">My Diet Coach</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="diary">Diary</string>
    <string name="reminders">Reminders</string>
    <string name="challenges">Challenges</string>
    <string name="photos">Photos</string>
    <string name="tips">Tips</string>
    <string name="tap_log_weight">Tap to log your weight</string>
    <string name="log_your_weight">Log your weight</string>
    <string name="home">Home</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Settings</string>
    <string name="contact_faq">Contact &amp; FAQ</string>
    <string name="diet_diary">Diet Diary</string>
    <string name="foods_exercises_journal">Foods and exercises journal</string>
    <string name="today">Today</string>
    <string name="beef">Beef</string>
    <string name="calories">Calories</string>
    <string name="consumed">Consumed</string>
    <string name="burned">Burned</string>
    <string name="left">Left</string>
    <string name="add_foods_copy_meals">Add foods and copy meals</string>
    <string name="meal">Meal</string>
    <string name="exercise">Exercise</string>
    <string name="start_typing_food">Start typing name of food</string>
    <string name="serving">Serving</string>
    <string name="amount">Amount</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="proteins">Proteins</string>
    <string name="sugar">Sugar</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated fat</string>
    <string name="polyunsaturated_fat">Polyunsaturated fat</string>
    <string name="monounsaturated_fat">Monounsaturated fat</string>
    <string name="trans_fat">Trans fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="potassium">Potassium</string>
    <string name="fiber">Fiber</string>
    <string name="vitamin_a_rda">Vitamin A (% from RDA)</string>
    <string name="vitamin_c_rda">Vitamin C (% from RDA)</string>
    <string name="calcium_rda">Calcium (% from RDA)</string>
    <string name="reminder">Reminder</string>
    <string name="repeat">Repeat</string>
    <string name="enter_type_exercise">Enter type of exercise</string>
    <string name="duration_minutes">Duration (minutes)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="adding_exercise_help">Adding exercise help</string>
    <string name="choose_exercise_from_list">Choose an exercise from the list, then duration. Calories will be calculated automatically (according to the weight specified in the profile - if you have set one)</string>
    <string name="ok">OK</string>
    <string name="exercise_reminder">Exercise Reminder</string>
    <string name="none">None</string>
    <string name="reminder_me">Reminder me</string>
    <string name="minutes">minutes</string>
    <string name="before_event">before event</string>
    <string name="done">Done</string>
    <string name="after_event">after event</string>
    <string name="edit_meals_history">Edit meals history</string>
    <string name="item_was_deleted">Item was deleted</string>
    <string name="daily_calories_goal">Daily Calories Goal</string>
    <string name="bmi">BMI</string>
    <string name="weight_height_units">Weight/Height Units</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height_cms">Height (cms)</string>
    <string name="current_weight">Current Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="activity_level">Activity Level</string>
    <string name="weeky_weight_loss_goal">Weeky weight loss goal (kgs)</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="continue_">Continue</string>
    <string name="sedentary">Sedentary</string>
    <string name="sedentary_detail">Sitting most of the day</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="on_your_feet_most_day">On your feet most of the day</string>
    <string name="moderately_active">Moderately Active</string>
    <string name="moderately_active_detail">Doing physical activity most of the day</string>
    <string name="very_active">Very Active</string>
    <string name="very_active_detail">Doing heavy physical activity most of the day</string>
    <string name="extremely_active">Extremely Active</string>
    <string name="extremely_active_detail">Doing extremely heavy phisical activity most of the day</string>
    <string name="cals_left_today">Cals left today</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="event">Other…</string>
    <string name="today_may_23">Today, May 23</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="example_hour">10:14 PM</string>
    <string name="example_food_name">Beef</string>
    <string name="click_to_show_more">Click to show more</string>
    <string name="cals_left_daily_target">cals left to daily target</string>
    <string name="eg_weight">150 g</string>
    <string name="eg_weight_2">50 mg</string>
    <string name="input_full_info">Please enter full information</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="_60">60</string>
    <string name="input_wrong_type">Please input positive number</string>
    <string name="profile">Profile</string>
    <string name="i_accept_the">I accept the &#160;</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="i_agree">I agree</string>
    <string name="start_weight">Start weight:</string>
    <string name="enter_your_weight">Please enter your weight</string>
    <string name="bigger_than_zero">Your weight must bigger than zero</string>
    <string name="must_accept_terms_conditions">You must accept Terms and Conditions</string>
    <string name="my_reminders">My Reminders</string>
    <string name="predefine_reminders">Predefine Reminders</string>
    <string name="add_reminder">Add reminder</string>
    <string name="reminder_text">Reminder\'s Text</string>
    <string name="start_date">Start date</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="delete">Delete</string>
    <string name="at">at</string>
    <string name="input_reminder_text">Please enter reminder\'s text</string>
    <string name="every_hour">Every Hour</string>
    <string name="every_two_hours">Every Two Hours</string>
    <string name="every_three_hours">Every Three Hours</string>
    <string name="every_four_hours">Every Four Hours</string>
    <string name="every_day">Every Day</string>
    <string name="every_week">Every Week</string>
    <string name="reminder_was_deleted">Reminder was deleted</string>
    <string name="title_activity_challenges">ChallengesActivity</string>
    <string name="take_up_healty">Take up healthy lifestyle challenges</string>
    <string name="your_chance_to_make_a_change">- This is your chance to make a change!!!</string>
    <string name="cut_the_ribbon_to_start">Cut the ribbon to start</string>
    <string name="track_challenges">Track Challenges</string>
    <string name="drink_more_water">Drink more water</string>
    <string name="earn_x_hh_points">Earned 0 HH points, 8 glasses left</string>
    <string name="stop_tracking_awhile">To stop tracking for a while press the \"Stop\" button</string>
    <string name="stop">Stop</string>
    <string name="undo">Undo</string>
    <string name="earned">Earned</string>
    <string name="hh_points">HH points,</string>
    <string name="edit_challenges">Edit challenges</string>
    <string name="share">Share</string>
    <string name="my_challenges">My Challenges</string>
    <string name="daily_target">Daily target</string>
    <string name="sit_ups">sit-ups</string>
    <string name="_do">Do</string>
    <string name="sets">sets</string>
    <string name="add_challenge">Add challenge</string>
    <string name="glasses">glasses</string>
    <string name="add">Add</string>
    <string name="challenge">Challenge</string>
    <string name="guide_tap_challenge_icon">Swipe or tap the colorful icon to mark as done (every time you do it)</string>
    <string name="gym_challenge_title">Go to the gym or exercise class</string>
    <string name="push_up_challenge_title">Do 20 push-ups</string>
    <string name="new_challenge">New challenge</string>
    <string name="walk_2_miles">Walk 2 miles</string>
    <string name="avoid_junk_food">Avoid junk food</string>
    <string name="fill_my_plate">Fill my plate only once</string>
    <string name="avoid_sugary_drinks">Avoid sugary drinks</string>
    <string name="avoid_snacking">Avoid snacking</string>
    <string name="emotion_eating_guide">Is it emotional eating? Write down your emotions in your diary and then spend 5 minutes thinking about them</string>
    <string name="add_your_tip">Add your own tip</string>
    <string name="choose_challenge">Choose challenge:</string>
    <string name="share_anomymously">Share (anomymously) with other users of My Diet Coach</string>
    <string name="faq2_question">How do I cancel my subcription renewal?</string>
    <string name="faq3_question">How do I delete or edit and Item from the diary?</string>
    <string name="liked">Liked</string>
    <string name="not_for_me">Not For Me</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="weight">Weight:</string>
    <string name="date">Date:</string>
    <string name="lost">Lost</string>
    <string name="faq2_answer1">Subcriptions can be managed by the user, where Auto-renewal can be canceled. Follow these steps to cancel a subcription on your device:</string>
    <string name="faq2_answer2">
        <![CDATA[1. Lauch the Google Play Store app.\n
    2. Tap Menu -> My Apps -> Subcriptions and tap on the app of the subcription you\'d like to cancel.\n
    3. Alternatively, tap Menu -> My Apps -> Tap the app of the subription you\'d like to cancel -> Tap the app\'s details page.]]>
    </string>
    <string name="for_more_details_see">For more details see:</string>
    <string name="cancel_or_change_a_subcription_on_google_play">Cancel or change a subcription on Google Play</string>
    <string name="faq2_answer3">
        <li>The cancellation will bgin in the next billing period (i.e. - The following month for a monthly subcription and the following year for a yearly subcription)</li>\n
        <li><b>Important</b>: Uninstalling an app will not automatically stop your subcription. You must cancel your subcription to end your subcription.</li></string>
    <string name="faq3_answer1">Swipe the row of the item in the diary list to the right and press the Delete icon.</string>
    <string name="faq3_answer2">You my also oen the item by pressing it on the diary list- this will allow you to edit or delete it.</string>
    <string name="_100">100</string>
    <string name="great_thanks">Great, thanks!</string>
    <string name="restarting_your_points">We\'re re-starting your points.</string>
    <string name="reached_level">You\'ve reached level 1 target!!!</string>
    <string name="next_target_is">Your next target is: 126 Points</string>
</resources>