<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/_140sdp"
    android:padding="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvCurrentWeight"
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDate"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAmountWeightChange"
        android:text="@string/lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>