<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_260sdp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/cup_dialog" />

        <FrameLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/btn_points_holder" />

            <TextView
                android:id="@+id/tvTargetPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_100"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_17ssp" />

        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvReachedLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:text="@string/reached_level"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTargetDialog"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/restarting_your_points"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvNextTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/next_target_is"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorGrey" />

    <TextView
        android:id="@+id/tvClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/great_thanks"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />
</LinearLayout>